# scout

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  probe_output.py  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: compliance.py  config.py  graph.py
app/extractors/: chunker.py
app/services/: crawler.py  deep_dive.py  text_normalization.py
tests/: test_api_endpoints.py  test_compliance_robots.py  test_crawler_proxy_config.py  test_deep_dive_filters.py  test_text_normalization.py
